@@ -102,6 +102,7 @@ public:
 	bool IsCameraInvisible() const;
 	bool IsVolume() const { return dynamic_cast<const Volume *>(material) != NULL; }
 	bool IsPhotonGIEnabled() const { return material->IsPhotonGIEnabled(); }
+	bool IsHoldout() const { return material->IsHoldout(); }
 	bool IsAlbedoEndPoint() const;
 	u_int GetObjectID() const;
 	u_int GetMaterialID() const { return material->GetID(); }
