@@ -45,3 +45,5 @@ film.outputs.3.type = USER_IMPORTANCE
 film.outputs.3.filename = USER_IMPORTANCE.png
 film.outputs.4.type = ALBEDO
 film.outputs.4.filename = ALBEDO.png
+film.outputs.5.type = ALPHA
+film.outputs.5.filename = ALPHA.png
