@@ -15,6 +15,7 @@
 * It is now possible to disable Optix (with property context.cuda.optix.enable) even if it is detected and available
 * Any mesh UV map can now be used for displacement (issue #416)
 * Subdiv shape now supports multiple vertex UVs, colors, alphas and AOVs (issue #416)
+* Added the support for holdout (issue #423)
 
 ### Fixed Bugs
 
